@@ -49,12 +49,11 @@ import com.sun.enterprise.deployment.util.DOLUtils;
 import com.sun.enterprise.security.SecurityContext;
 import com.sun.enterprise.transaction.api.JavaEETransactionManager;
 import com.sun.enterprise.util.Utility;
-import fish.payara.opentracing.propagation.MapToTextMap;
 import org.glassfish.api.invocation.ComponentInvocation;
 import org.glassfish.api.invocation.InvocationManager;
 import org.glassfish.concurrent.LogFacade;
-import org.glassfish.enterprise.concurrent.spi.ContextHandle;
-import org.glassfish.enterprise.concurrent.spi.ContextSetupProvider;
+import org.glassfish.concurro.spi.ContextHandle;
+import org.glassfish.concurro.spi.ContextSetupProvider;
 import org.glassfish.internal.deployment.Deployment;
 
 import jakarta.enterprise.concurrent.ContextService;
@@ -71,12 +70,9 @@ import java.util.logging.Logger;
 
 import fish.payara.nucleus.requesttracing.RequestTracingService;
 import fish.payara.nucleus.healthcheck.stuck.StuckThreadsStore;
-import fish.payara.notification.requesttracing.RequestTraceSpanContext;
 import fish.payara.opentracing.OpenTracingService;
-import io.opentracing.SpanContext;
 import io.opentracing.Tracer;
 import io.opentracing.Tracer.SpanBuilder;
-import io.opentracing.propagation.Format;
 import jakarta.enterprise.concurrent.ContextServiceDefinition;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -317,7 +313,7 @@ public class ContextSetupProviderImpl implements ContextSetupProvider {
         }
 
         if (stuckThreads != null) {
-            stuckThreads.registerThread(Thread.currentThread().getId());
+            stuckThreads.registerThread(Thread.currentThread().threadId());
         }
 
         // execute thread contexts snapshots to begin
@@ -408,7 +404,7 @@ public class ContextSetupProviderImpl implements ContextSetupProvider {
             requestTracing.endTrace();
         }
         if (stuckThreads != null) {
-            stuckThreads.deregisterThread(Thread.currentThread().getId());
+            stuckThreads.deregisterThread(Thread.currentThread().threadId());
         }
     }
 
