@@ -37,34 +37,8 @@
  * only if the new code is made subject to such option by the copyright
  * holder.
  */
-// Portions Copyright [2018-2021] [Payara Foundation and/or its affiliates]
+// Portions Copyright [2018-2024] [Payara Foundation and/or its affiliates]
 package com.sun.enterprise.iiop.security;
-
-import static com.sun.corba.ee.spi.presentation.rmi.StubAdapter.isLocal;
-import static com.sun.corba.ee.spi.presentation.rmi.StubAdapter.isStub;
-import static com.sun.enterprise.security.common.AppservAccessController.privilegedAlways;
-import static java.util.logging.Level.FINE;
-import static java.util.logging.Level.SEVERE;
-
-import java.net.MalformedURLException;
-import java.net.Socket;
-import java.net.URL;
-import java.security.CodeSource;
-import java.security.Policy;
-import java.security.Principal;
-import java.security.ProtectionDomain;
-import java.security.cert.Certificate;
-import java.util.Set;
-import java.util.logging.Level;
-
-import jakarta.inject.Inject;
-import jakarta.inject.Singleton;
-import javax.security.auth.Subject;
-
-import org.glassfish.enterprise.iiop.api.GlassFishORBHelper;
-import org.glassfish.enterprise.iiop.api.ProtocolManager;
-import org.glassfish.hk2.api.PostConstruct;
-import org.jvnet.hk2.annotations.Service;
 
 import com.sun.corba.ee.spi.ior.IOR;
 import com.sun.corba.ee.spi.orb.ORB;
@@ -72,6 +46,21 @@ import com.sun.enterprise.common.iiop.security.SecurityContext;
 import com.sun.enterprise.security.CORBAObjectPermission;
 import com.sun.enterprise.security.auth.WebAndEjbToJaasBridge;
 import com.sun.logging.LogDomains;
+import jakarta.inject.Inject;
+import jakarta.inject.Singleton;
+import jakarta.security.jacc.PolicyFactory;
+import java.net.Socket;
+import java.util.logging.Level;
+import javax.security.auth.Subject;
+import org.glassfish.enterprise.iiop.api.GlassFishORBHelper;
+import org.glassfish.enterprise.iiop.api.ProtocolManager;
+import org.glassfish.hk2.api.PostConstruct;
+import org.jvnet.hk2.annotations.Service;
+
+import static com.sun.corba.ee.spi.presentation.rmi.StubAdapter.isLocal;
+import static com.sun.corba.ee.spi.presentation.rmi.StubAdapter.isStub;
+import static java.util.logging.Level.FINE;
+import static java.util.logging.Level.SEVERE;
 
 /**
  * This class provides has the helper methods to deal with the SecurityContext. This represents the
@@ -90,7 +79,6 @@ public class SecurityContextUtil implements PostConstruct {
     private static java.util.logging.Logger _logger = LogDomains.getLogger(SecurityContextUtil.class, LogDomains.SECURITY_LOGGER);
 
     private static String IS_A = "_is_a";
-    private Policy policy;
 
     @Inject
     private GlassFishORBHelper orbHelper;
@@ -100,7 +88,6 @@ public class SecurityContextUtil implements PostConstruct {
 
     @Override
     public void postConstruct() {
-        privilegedAlways(() -> policy = Policy.getPolicy());
     }
 
     /**
@@ -114,7 +101,7 @@ public class SecurityContextUtil implements PostConstruct {
         
         if (isStub(effectiveTarget) && isLocal(effectiveTarget)) {
             // XXX: Workaround for non-null connection object ri for local invocation.
-            ConnectionExecutionContext.setClientThreadID(Thread.currentThread().getId());
+            ConnectionExecutionContext.setClientThreadID(Thread.currentThread().threadId());
             return null;
         }
 
@@ -149,7 +136,9 @@ public class SecurityContextUtil implements PostConstruct {
             _logger.log(FINE, "Failed status");
             // what kind of exception should we throw?
             throw new RuntimeException("Target did not accept security context");
-        } else if (reply_status == STATUS_RETRY) {
+        } 
+        
+        if (reply_status == STATUS_RETRY) {
             _logger.log(FINE, "Retry status");
         } else {
             _logger.log(FINE, "Passed status");
@@ -204,8 +193,7 @@ public class SecurityContextUtil implements PostConstruct {
      */
     private void authenticate(Subject subject, Class<?> credentialClass) throws SecurityMechanismException {
         try {
-            privilegedAlways(() -> WebAndEjbToJaasBridge.login(subject, credentialClass));
-            
+            WebAndEjbToJaasBridge.login(subject, credentialClass);
         } catch (Exception e) {
             if (_logger.isLoggable(SEVERE)) {
                 _logger.log(SEVERE, "iiop.login_exception", e.toString());
@@ -218,47 +206,33 @@ public class SecurityContextUtil implements PostConstruct {
 
     // return true if authorization succeeds, false otherwise.
     private boolean authorizeCORBA(byte[] objectId, String method) throws Exception {
-        
+
         ProtocolManager protocolManager = orbHelper.getProtocolManager();
-        
+
         // Check to make sure protocolManager is not null.
         // This could happen during server initialization or if this call
         // is on a callback object in the client VM.
         if (protocolManager == null) {
             return true;
         }
-        
+
         // Check if target is an EJB
         if (protocolManager.getEjbDescriptor(objectId) != null) {
             return true; // an EJB object
         }
-        
-        // Create a ProtectionDomain for principal on current thread.
-        ProtectionDomain principalsDomain = createPrincipalDomain(getPrincipalArray(com.sun.enterprise.security.SecurityContext.getCurrent()));
 
-        // Create the permission we want to check for
-        CORBAObjectPermission permission = new CORBAObjectPermission("*", method);
-        
+        com.sun.enterprise.security.SecurityContext securityContext = com.sun.enterprise.security.SecurityContext.getCurrent();
+
         // Check if policy gives principal the permissions
-        boolean result = policy.implies(principalsDomain, permission);
+        boolean result = PolicyFactory.getPolicyFactory().getPolicy().implies(
+                new CORBAObjectPermission("*", method),
+                securityContext.getPrincipalSet());
 
         if (_logger.isLoggable(FINE)) {
             _logger.log(FINE, "CORBA Object permission evaluation result=" + result + " for method=" + method);
         }
-        
+
         return result;
-    }
-    
-    private ProtectionDomain createPrincipalDomain(Principal[] principals) throws MalformedURLException {
-        return new ProtectionDomain(
-                new CodeSource(new URL("file://"), (Certificate[]) null), 
-                null, null,
-                principals);
-    }
-    
-    private Principal[] getPrincipalArray(com.sun.enterprise.security.SecurityContext securityContext) {
-        Set<Principal> principalSet = securityContext.getPrincipalSet();
-        return principalSet == null ? null : principalSet.toArray(new Principal[principalSet.size()]);
     }
 
     /**
